# lean4

./: .gitignore  .gitmodules  1-env.sh  CMakeLists.txt  README.md  flake.nix  lean-toolchain  shell.nix
.github/workflows/: ci.yml
1-bench-scripts/: bench-stage2-perf-delta.py  bench-stage2-perf-delta.sh  requirements.txt
1-runs/run-2023-03-28---22-25/: 1711665962---28-03-2024---22:46:02.noreuse.csv  1711667536---28-03-2024---23:12:16.reuse.csv
1-runs/run-2023-03-28---23-51/: 1711699885---29-03-2024---08:11:25.noreuse.stage2.csv  1711699885---29-03-2024---08:11:25.noreuse.stage3.csv  1711702292---29-03-2024---08:51:32.reuse.stage2.csv  1711702292---29-03-2024---08:51:32.reuse.stage3.csv
1-runs/run-2023-03-28-noon/: 1711649570---28-03-2024---18:12:50.noreuse.csv  1711650784---28-03-2024---18:33:04.reuse.csv
1-runs/run-2023-03-29---10-27---tcg40/: 1711715563---29-03-2024---12:32:43.reuse.stage2.csv
1-runs/run-2023-03-29---13-00---tcg40/: 1711714053---29-03-2024---12:07:33.noreuse.stage2.csv  log.txt  run-INCORRECT-bash-worker.sh  run-INCORRECT-bash-wrapper.sh
1-runs/run-2023-03-29---14-12---tcg40/: log.txt  run-INCORRECT-bash-worker.sh
doc/: env-vars  metaprogramming.html  print.html  searchindex.js  searchindex.json
doc/examples/: interp.lean.html  (+1 more)
lean4-mode/: lean4-input.el
nix/: bootstrap.nix
script/: prepare-llvm-linux.sh  prepare-llvm-macos.sh  prepare-llvm-mingw.sh
src/: CMakeLists.txt  lean-toolchain  lean.c.mk.in  lean.llvm.mk.in  lean.mk.in  stdlib.make.in
src/util/: CMakeLists.txt  shell.cpp
tests/: .gitignore  common.sh
(+114 files in other folders)
